Issues with displaying OpenGL VBO's on some systems #35993

Closed
opened 2013-07-03 22:40:57 +02:00 by luis cofre · 12 comments

%%%--- Operating System, Graphics card ---

win 7 64 bits servise pack 1, geforce gtx 460 1 gb
- Blender version with error, and version that worked ---

2.67.1 r57908
- Short description of error ---
When I zoom in the viewport, some objects become black. not in every scene.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

zoom in some points of view (the view file is in error).

%%%

%%%--- Operating System, Graphics card --- win 7 64 bits servise pack 1, geforce gtx 460 1 gb - Blender version with error, and version that worked --- 2.67.1 r57908 - Short description of error --- When I zoom in the viewport, some objects become black. not in every scene. - Steps for others to reproduce the error (preferably based on attached .blend file) --- zoom in some points of view (the view file is in error). %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Checked the file, I dont see any black objects.

Could you post a screenshot of the problem?%%%

%%%Checked the file, I dont see any black objects. Could you post a screenshot of the problem?%%%

%%%thanks for replying, here a video of the problem.
this is the video link, update drivers.

http://www.youtube.com/watch?v=u80FlyYbY9w&feature=youtu.be%%%

%%%thanks for replying, here a video of the problem. this is the video link, update drivers. http://www.youtube.com/watch?v=u80FlyYbY9w&feature=youtu.be%%%

%%%I can confirm this issue on Windows 7 with NVidia 650M, on OS X I don't see this. VBO's must be enabled to redo the issue.

It seems to be related to GPU_buffer_draw_elements for VBO wireframe drawing inside a display list for particle duplis. When removing the call to glDrawElements there the problem goes away. I don't understand why it happens though, there's no OpenGL error, no suspicious OpenGL state changes that I could find. Maybe it's a driver bug, using a VBO inside a display list is not that common, but I didn't find a workaround yet.%%%

%%%I can confirm this issue on Windows 7 with NVidia 650M, on OS X I don't see this. VBO's must be enabled to redo the issue. It seems to be related to GPU_buffer_draw_elements for VBO wireframe drawing inside a display list for particle duplis. When removing the call to glDrawElements there the problem goes away. I don't understand why it happens though, there's no OpenGL error, no suspicious OpenGL state changes that I could find. Maybe it's a driver bug, using a VBO inside a display list is not that common, but I didn't find a workaround yet.%%%

%%%From
http://www.opengl.org/registry/doc/glspec21.20061201.pdf page 244 of the text (258 of pdf index)

"""
GL commands that source data from buffer objects dereference the buffer ob-
ject data in question at display list compile time, rather than encoding the buffer
ID and buffer offset into the display list. Only GL commands that are executed
immediately, rather than being compiled into a display list, are permitted to use a
buffer object as a data sink
"""

I can reproduce here as well (NVIDIA geforce 540M GT). It may be an NVIDIA driver issue, but IMO, better avoid such scenarios.

%%%

%%%From http://www.opengl.org/registry/doc/glspec21.20061201.pdf page 244 of the text (258 of pdf index) """ GL commands that source data from buffer objects dereference the buffer ob- ject data in question at display list compile time, rather than encoding the buffer ID and buffer offset into the display list. Only GL commands that are executed immediately, rather than being compiled into a display list, are permitted to use a buffer object as a data sink """ I can reproduce here as well (NVIDIA geforce 540M GT). It may be an NVIDIA driver issue, but IMO, better avoid such scenarios. %%%
Campbell Barton changed title from problem when zooming to Issues with displaying OpenGL VBO's on some systems 2014-09-03 16:28:40 +02:00

Was the file is lost on transition to phabricator? Can we get it back?

Was the file is lost on transition to phabricator? Can we get it back?
Brecht Van Lommel was unassigned by Sergey Sharybin 2014-09-19 15:10:43 +02:00
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-09-19 15:10:43 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey
The old report with file is here: https://projects.blender.org/tracker/index.php?redirect=no&func=detail&aid=35993&group_id=9&atid=498

Ah, it's not zoom that influences this, it's hiding of the object. Possibly it's some state that doesn't get restored.

Ah, it's not zoom that influences this, it's hiding of the object. Possibly it's some state that doesn't get restored.

This issue was referenced by 23e2c97f63

This issue was referenced by 23e2c97f63f18eadee34bf5ea9efc1b4aff2b5c2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 23e2c97f63.

Closed by commit 23e2c97f63.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35993
There is no content yet.